Fixing some layout issues arising

--- a/_includes/assets/sass/common/_variables.scss
+++ b/_includes/assets/sass/common/_variables.scss
@@ -8,7 +8,7 @@ VARIABLES
 
 // Units
 $base-space: 27px;
-$mobile-space: $base-space * 0.666667;
+$mobile-space: $base-space * 0.66666666667;
 
 // Colors
 $white: rgba(255, 255, 255, 100%);            // #FFFFFF
